--- a/assets/scss/pages/_page-project.scss
+++ b/assets/scss/pages/_page-project.scss
@@ -77,6 +77,7 @@
     width: size(18, 24);
     max-height: calc(100vh - 108px - 100px);
     height: 100%;
+    overflow: hidden;
 
     background-color: $black;
 
