--- a/assets/scss/partials/_project-list-item.scss
+++ b/assets/scss/partials/_project-list-item.scss
@@ -11,6 +11,19 @@
 
     width: 100%;
     height: 140px;
+
+    svg {
+        transform-origin: right top;
+        transition: transform 1s $Power4InOut;
+    }
+
+    &.is-active {
+        svg {
+            transform: rotate(45deg);
+            transition-duration: 1s;
+            transition-timing-function: $Power4InOut;
+        }
+    }
 }
 
 .project-list-item__link {
